Fixed movie selection text wrapping issue

--- a/lmnop.css
+++ b/lmnop.css
@@ -664,7 +664,7 @@ li.nav-item.active>a.nav-link {
 }
 
 .selection p:first-of-type {
-    margin-top: 25px;
+    margin-top: 5px;
 }
 
 .selection .poster {
